fix scrollbar style and for firefox

--- a/src/app/pages/animal-list/animal-list.component.scss
+++ b/src/app/pages/animal-list/animal-list.component.scss
@@ -1,7 +1,7 @@
 @import '../../../style-variables.scss';
 
 
-.list {
+.lists {
   height: 100%;
   border-radius: 15px;
 
@@ -29,99 +29,107 @@
     }
   }
 
-  &-category {
-    overflow: auto;
-    max-height: calc(93% - 6px);
-    background-color: $white;
+  .list {
+    height: 90%;
+    padding-right: 3px;
+    background-color: #ffffff;
     border-radius: 0 0 15px 15px;
     border: 2px solid black;
     border-top-width: 0;
 
-    .item {
-      position: relative;
-      display: inline-block;
-      text-align: center;
-      border-radius: 10px;
-      width: 29.33%;
-      padding: 1%;
-      margin: 1%;
+    &-category {
+      overflow: auto;
+      max-height: 100%;
+      // scrollbar on firefox
+      scrollbar-color: $lightgrey transparent;
+      scrollbar-width: thin;
 
-      &:hover {
-        background-color: $lightgrey;
-      }
-
-      h2 {
-        font-family: 'Neucha', cursive !important;
-        text-transform: capitalize;
-        font-weight: bold;
-        margin: 0;
-      }
-
-      img {
-        max-width: 50%;
-        max-height: 110px;
-        margin-top: 5%;
-        -webkit-filter: drop-shadow(5px 5px 5px #222);
-        filter: drop-shadow(5px 5px 5px #222);
-      }
-    }
-
-    &.hidden {
-      display: none;
-    }
-
-    &::-webkit-scrollbar {
-      width: 8px;
-    }
-
-    &::-webkit-scrollbar-track {
-      background-color: transparent;
-      margin: 10px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      border-radius: 10px;
-      box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
-      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
-      background: linear-gradient(
-        45deg,
-        rgba(255, 0, 0, 1) 0%,
-        rgba(255, 154, 0, 1) 10%,
-        rgba(208, 222, 33, 1) 20%,
-        rgba(79, 220, 74, 1) 30%,
-        rgba(63, 218, 216, 1) 40%,
-        rgba(47, 201, 226, 1) 50%,
-        rgba(28, 127, 238, 1) 60%,
-        rgba(95, 21, 242, 1) 70%,
-        rgba(186, 12, 248, 1) 80%,
-        rgba(251, 7, 217, 1) 90%,
-        rgba(255, 0, 0, 1) 100%
-      );
-    }
-
-    .eggs-button {
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-
-      .upgrade {
-        cursor: pointer;
-        font-weight: bold;
-        white-space: nowrap;
-        text-shadow: 1px 1px 4px $black;
-        color: $white;
-        background-color: $button-blue;
-        border: 3px solid $button-blue-border;
-        border-radius: 15px;
-        padding: 3px 30px;
-        font-size: 1.2rem;
+      .item {
+        position: relative;
+        display: inline-block;
+        text-align: center;
+        border-radius: 10px;
+        width: 29.33%;
+        padding: 1%;
+        margin: 1%;
 
         &:hover {
-          text-shadow: 1px 1px 4px $white;
-          background-color: $button-blue-active;
-          border: 3px solid $button-blue-active-border;
-          color: $black;
+          background-color: $lightgrey;
+        }
+
+        h2 {
+          font-family: 'Neucha', cursive !important;
+          text-transform: capitalize;
+          font-weight: bold;
+          margin: 0;
+        }
+
+        img {
+          max-width: 50%;
+          max-height: 110px;
+          margin-top: 5%;
+          -webkit-filter: drop-shadow(5px 5px 5px #222);
+          filter: drop-shadow(5px 5px 5px #222);
+        }
+      }
+
+      &.hidden {
+        display: none;
+      }
+
+      &::-webkit-scrollbar {
+        width: 8px;
+      }
+
+      &::-webkit-scrollbar-track {
+        background-color: transparent;
+        margin: 10px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+        background: linear-gradient(
+          45deg,
+          rgba(255, 0, 0, 1) 0%,
+          rgba(255, 154, 0, 1) 10%,
+          rgba(208, 222, 33, 1) 20%,
+          rgba(79, 220, 74, 1) 30%,
+          rgba(63, 218, 216, 1) 40%,
+          rgba(47, 201, 226, 1) 50%,
+          rgba(28, 127, 238, 1) 60%,
+          rgba(95, 21, 242, 1) 70%,
+          rgba(186, 12, 248, 1) 80%,
+          rgba(251, 7, 217, 1) 90%,
+          rgba(255, 0, 0, 1) 100%
+        );
+      }
+
+      .eggs-button {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+
+        .upgrade {
+          cursor: pointer;
+          font-weight: bold;
+          white-space: nowrap;
+          text-shadow: 1px 1px 4px $black;
+          color: $white;
+          background-color: $button-blue;
+          border: 3px solid $button-blue-border;
+          border-radius: 15px;
+          padding: 3px 30px;
+          font-size: 1.2rem;
+
+          &:hover {
+            text-shadow: 1px 1px 4px $white;
+            background-color: $button-blue-active;
+            border: 3px solid $button-blue-active-border;
+            color: $black;
+          }
         }
       }
     }
